--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField 'String', 'WEATHER_API_KEY', '"44cc9c9dda3d426ba6e215249222604"'
+        buildConfigField 'String', 'BASE_URL', '"https://api.weatherapi.com/v1/"'
     }
 
     buildTypes {
