--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField 'String', 'WEATHER_API_KEY', '"44cc9c9dda3d426ba6e215249222604"'
         buildConfigField 'String', 'BASE_URL', '"https://api.weatherapi.com/v1/"'
+        buildConfigField 'String', 'FORCAST_DAYS', '"3"'
     }
 
     buildTypes {
