--- a/appConfig.gradle
+++ b/appConfig.gradle
@@ -12,13 +12,14 @@ ext {
 
     // androidCore versions
     def appcompat = "1.4.1"
+    def activity_version = "1.4.0"
     def recyclerview = "1.2.1"
     def constraint_layout = "2.0.4"
     def material = "1.5.0"
 
 
     // lifecycle versions
-    def lifecycle_version = "2.3.1"
+    def lifecycle_version = "2.5.0-alpha05"
 
 
     //retrofit versions
@@ -40,7 +41,8 @@ ext {
             "androidx.appcompat:appcompat:$appcompat",
             "androidx.recyclerview:recyclerview:$recyclerview",
             "androidx.constraintlayout:constraintlayout:$constraint_layout",
-            "com.google.android.material:material:$material"
+            "com.google.android.material:material:$material",
+            "androidx.activity:activity-ktx:$activity_version"
     ]
 
 
